# LCPMotionPlanner

./: .gitignore  .gitmodules  CMakeLists.txt  LCPMotionPlanner.sln  LCPMotionPlanner.vcxproj  LICENSE  ManipulatorCollisionAvoidance.sln  ManipulatorCollisionAvoidance.vcxproj  README.md
MotionPlanner/: CMakeLists.txt  MotionPlanner.Build.cs
MotionPlanner/Private/: DualNumber.cpp  DualQuaternion.cpp  FrankaPanda.cpp  LCPSolve.cpp  MotionPlanner.cpp  MotionPlannerSolver.cpp  SpatialManipulator.cpp  kinematics.cpp
MotionPlanner/Public/: DualNumber.h  DualQuaternion.h  FrankaPanda.h  MotionPlannerSolver.h  SpatialManipulator.h
MotionPlanner/include/: DualNumber.h  DualQuaternion.h  LCPSolve.h  SpatialManipulator.h  SphereObstacle.h  kinematics.h
MotionPlanner/src/: DualNumber.cpp  DualQuaternion.cpp  LCPSolve.cpp  SpatialManipulator.cpp  SphereObstacle.cpp  main.cpp
docs/: issues.md
docs/doxygen/: Doxyfile
docs/doxygen/html/: _box_8cpp.html  _box_8cpp__incl.dot  _box_8cpp_source.html  _box_8h.html  _box_8h.js  _box_8h__dep__incl.dot  _box_8h__incl.dot  _box_8h_source.html  _capsule_8cpp.html  _capsule_8cpp__incl.dot  _capsule_8cpp_source.html  _capsule_8h.html  _capsule_8h.js  _capsule_8h__dep__incl.dot  _capsule_8h__incl.dot  _capsule_8h_source.html  _collision_aggregate_8cpp.html  _collision_aggregate_8cpp__incl.dot  _collision_aggregate_8cpp_source.html  _collision_aggregate_8h.html  _collision_aggregate_8h.js  _collision_aggregate_8h__dep__incl.dot  _collision_aggregate_8h__incl.dot  _collision_aggregate_8h_source.html  _contact_manager_8cpp.html  _contact_manager_8cpp__incl.dot  _contact_manager_8cpp_source.html  _contact_manager_8h.html  _contact_manager_8h.js  _contact_manager_8h__dep__incl.dot  _contact_manager_8h__incl.dot  _contact_manager_8h_source.html  _contact_point_8cpp.html  _contact_point_8cpp__incl.dot  _contact_point_8cpp_source.html  _contact_point_8h.html  _contact_point_8h.js  _contact_point_8h__dep__incl.dot  _contact_point_8h__incl.dot  _contact_point_8h_source.html  (+426 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  (+39 more)
docs/doxygen/latex/: _box_8cpp.tex  _box_8cpp_source.tex  _box_8h.tex  _box_8h_source.tex  _capsule_8cpp.tex  _capsule_8cpp_source.tex  _capsule_8h.tex  _capsule_8h_source.tex  _collision_aggregate_8cpp.tex  _collision_aggregate_8cpp_source.tex  _collision_aggregate_8h.tex  _collision_aggregate_8h_source.tex  _contact_manager_8cpp.tex  _contact_manager_8cpp_source.tex  _contact_manager_8h.tex  _contact_manager_8h_source.tex  _contact_point_8cpp.tex  _contact_point_8cpp_source.tex  _contact_point_8h.tex  _contact_point_8h_source.tex  _contact_report_callback_8cpp.tex  _contact_report_callback_8cpp_source.tex  _contact_report_callback_8h.tex  _contact_report_callback_8h_source.tex  _contact_report_filter_shader_8cpp.tex  _contact_report_filter_shader_8cpp_source.tex  _contact_report_filter_shader_8h.tex  _contact_report_filter_shader_8h_source.tex  _dual_number_8cpp.tex  _dual_number_8cpp_source.tex  _dual_number_8h.tex  _dual_number_8h_source.tex  _dual_quaternion_8cpp.tex  _dual_quaternion_8cpp_source.tex  _dual_quaternion_8h.tex  _dual_quaternion_8h_source.tex  _franka_panda_8cpp.tex  _franka_panda_8cpp_source.tex  _franka_panda_8h.tex  _franka_panda_8h_source.tex  (+92 more)
examples/: CMakeLists.txt  Example1.cpp  Example2.cpp  SimulationBase.cpp  main.cpp
examples/include/: Example1.h  Example2.h
include/: Box.h  Capsule.h  CollisionAggregate.h  ContactManager.h  ContactPoint.h  ContactReportCallback.h  ContactReportFilterShader.h  DualNumber.h  DualQuaternion.h  FrankaPanda.h  Joint.h  Kinematics.h  LCPSolve.h  ManipulatorMotionPlanner.h  MotionPlanner.h  MotionPlanningParameters.h  ObjectType.h  PhysXEnv.h  PhysXHelperFunctions.h  PhysicsCore.h  PhysicsScene.h  RigidBody.h  RigidBodyChain.h  Shape.h  SpatialManipulator.h  Sphere.h
src/: Box.cpp  CMakeLists.txt  Capsule.cpp  CollisionAggregate.cpp  ContactManager.cpp  ContactPoint.cpp  ContactReportCallback.cpp  ContactReportFilterShader.cpp  DualNumber.cpp  DualQuaternion.cpp  FrankaPanda.cpp  GlobalPlanner.cpp  Joint.cpp  Kinematics.cpp  LCPSolve.cpp  LocalPlanner.cpp  ManipulatorMotionPlanner.cpp  MotionPlanner.cpp  PhysXEnv.cpp  PhysXHelperFunctions.cpp  PhysicsCore.cpp  PhysicsScene.cpp  RigidBody.cpp  RigidBodyChain.cpp  RobotConfiguration.cpp  Shape.cpp  SpatialManipulator.cpp  Sphere.cpp  TaskSpaceSampler.cpp  Timer.cpp  main.cpp
src/include/: Capsule.h  ContactManager.h  DualNumber.h  DualQuaternion.h  FrankaPanda.h  GlobalPlanner.h  GlobalPlannerParams.h  Joint.h  LCPSolve.h  LocalPlanner.h  LocalPlannerParams.h  ManipulatorMotionPlanner.h  MotionPlanResults.h  MotionPlanningParameters.h  PhysXHelperFunctions.h  PhysicsCore.h  PhysicsScene.h  PlannerExitCodes.h  RigidBody.h  RigidBodyChain.h  RobotConfiguration.h  SpatialManipulator.h  Sphere.h  TaskSpaceSampler.h  Timer.h
